--- a/modules/.README.md
+++ b/modules/.README.md
@@ -4,7 +4,7 @@
 Полное описание всех доступных методов API находится в **`config.php`**, **`database.php`**, **`module.php`**, **`utils.php`** и **`vk.php`**.
 
 <br><br>
-### Обозначения файлов в **`modules`**
+### Обозначения файлов в modules
 1. **`modules/имя_моодуля`** - Папка где хранятся файлы модуля
 * **`preload.php`** - Файл, который подключается первым. Во время его выполнения могут быть подключены не все **`preload.php`** из других модулей;
 * **`имя_события.php`** - Файл, который подключается во время определённого события после всех **`preload.php`**.
